--- a/Dealwheel/Base.lproj/Main.storyboard
+++ b/Dealwheel/Base.lproj/Main.storyboard
@@ -99,7 +99,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You won" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWo-Px-V66">
-                                <rect key="frame" x="110" y="191" width="100" height="21"/>
+                                <rect key="frame" x="110" y="191" width="100" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="LeC-fc-roc"/>
                                 </constraints>
@@ -107,20 +107,20 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempfoodimage.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="7zh-e3-NF7">
-                                <rect key="frame" x="40" y="240" width="240" height="136"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7zh-e3-NF7">
+                                <rect key="frame" x="40" y="239" width="240" height="136"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="7zh-e3-NF7" secondAttribute="height" multiplier="30:17" id="wLc-e3-xWg"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is an awesome deal I just won on this app" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hu-tG-gii">
-                                <rect key="frame" x="40" y="386" width="240" height="42"/>
+                                <rect key="frame" x="40" y="385" width="240" height="39.5"/>
                                 <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kFk-pD-KEL">
-                                <rect key="frame" x="112" y="485" width="96" height="33"/>
+                                <rect key="frame" x="112" y="486" width="96" height="32"/>
                                 <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
                                 <state key="normal" title="Re-spin">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -130,7 +130,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YB4-0H-6h2">
-                                <rect key="frame" x="60" y="444" width="200" height="33"/>
+                                <rect key="frame" x="60" y="446" width="200" height="32"/>
                                 <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
                                 <state key="normal" title="Buy now for 50 points">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -140,7 +140,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
                             <constraint firstItem="Y5b-yC-biB" firstAttribute="top" secondItem="kWG-e5-ABa" secondAttribute="bottom" constant="32" id="0zc-Cx-xhF"/>
                             <constraint firstItem="YB4-0H-6h2" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="44" id="2l9-Yn-GqO"/>
@@ -186,13 +186,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Evan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsi-qa-UlL">
-                                <rect key="frame" x="24" y="523.5" width="46.5" height="24.5"/>
+                                <rect key="frame" x="24" y="524.5" width="47.5" height="23.5"/>
                                 <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="21"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nb-uZ-nqP">
-                                <rect key="frame" x="224.5" y="521.5" width="38.5" height="27"/>
+                                <rect key="frame" x="229.5" y="523" width="33.5" height="25.5"/>
                                 <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -209,7 +209,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star@x.png" translatesAutoresizingMaskIntoConstraints="NO" id="oAu-5W-eHU">
-                                <rect key="frame" x="274" y="523" width="20" height="21.5"/>
+                                <rect key="frame" x="274" y="524.5" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="dTq-hv-3aI"/>
                                 </constraints>
@@ -409,12 +409,93 @@
             </objects>
             <point key="canvasLocation" x="448" y="925"/>
         </scene>
+        <!--Prize View Controller-->
+        <scene sceneID="yuG-HS-h0m">
+            <objects>
+                <viewController id="UbD-iJ-3AO" customClass="PrizeViewController" customModule="Dealwheel" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oRT-3S-5Rg"/>
+                        <viewControllerLayoutGuide type="bottom" id="dqM-Jc-AvT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="X63-Yd-6uV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedge.png" translatesAutoresizingMaskIntoConstraints="NO" id="sbT-P3-pee">
+                                <rect key="frame" x="61" y="79" width="198" height="148"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="sbT-P3-pee" secondAttribute="height" multiplier="85:64" constant="1.4375" id="1LL-1J-BNW"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You won" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YwO-H1-VLQ">
+                                <rect key="frame" x="110" y="235" width="100" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="tu6-LH-Pi0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is an awesome deal I just won on this app" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PPU-V0-F3D">
+                                <rect key="frame" x="40" y="299" width="240" height="39.5"/>
+                                <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EEc-cs-I14">
+                                <rect key="frame" x="112" y="454" width="96" height="32"/>
+                                <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
+                                <state key="normal" title="Continue">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="continueButtonTapped:" destination="UbD-iJ-3AO" eventType="touchUpInside" id="oaY-Qy-fj5"/>
+                                    <action selector="respinButtonTapped:" destination="UbD-iJ-3AO" eventType="touchUpInside" id="afn-qe-AgJ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We'll email you the details!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PIp-jW-K3m">
+                                <rect key="frame" x="40" y="353" width="240" height="39.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39.5" id="PkX-dS-Xcq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <constraints>
+                            <constraint firstItem="sbT-P3-pee" firstAttribute="top" secondItem="oRT-3S-5Rg" secondAttribute="bottom" constant="59" id="2e7-qG-9CL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="sbT-P3-pee" secondAttribute="trailing" constant="45" id="86E-kD-iDa"/>
+                            <constraint firstItem="PIp-jW-K3m" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leading" constant="40" id="9Y5-Fh-Ega"/>
+                            <constraint firstItem="sbT-P3-pee" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="45" id="BFC-dV-HwP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="PPU-V0-F3D" secondAttribute="trailing" constant="24" id="Km7-Gy-lJb"/>
+                            <constraint firstItem="PPU-V0-F3D" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="24" id="Q4k-DZ-zsa"/>
+                            <constraint firstItem="dqM-Jc-AvT" firstAttribute="top" secondItem="EEc-cs-I14" secondAttribute="bottom" constant="82" id="Wyj-Pw-ZCh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="YwO-H1-VLQ" secondAttribute="trailing" constant="94" id="XIf-Ff-bbQ"/>
+                            <constraint firstItem="PPU-V0-F3D" firstAttribute="top" secondItem="YwO-H1-VLQ" secondAttribute="bottom" constant="44" id="bcm-dv-5Sa"/>
+                            <constraint firstItem="YwO-H1-VLQ" firstAttribute="top" secondItem="sbT-P3-pee" secondAttribute="bottom" constant="8" id="gy2-AB-QwH"/>
+                            <constraint firstItem="YwO-H1-VLQ" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="94" id="hfe-p8-tON"/>
+                            <constraint firstItem="EEc-cs-I14" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="96" id="iV6-Fh-NU0"/>
+                            <constraint firstAttribute="trailing" secondItem="PIp-jW-K3m" secondAttribute="trailing" constant="40" id="jPE-Tu-Awe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="EEc-cs-I14" secondAttribute="trailing" constant="96" id="ktd-QN-mjT"/>
+                            <constraint firstItem="PIp-jW-K3m" firstAttribute="top" secondItem="PPU-V0-F3D" secondAttribute="bottom" constant="14.5" id="q4L-Yh-eCG"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="dealTitleLabel" destination="PPU-V0-F3D" id="q2l-6y-O7G"/>
+                        <outlet property="wedgeImageView" destination="sbT-P3-pee" id="IKk-kQ-f60"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D6W-xw-DUe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2887.5" y="-631.69014084507046"/>
+        </scene>
     </scenes>
     <resources>
         <image name="arrowGold.png" width="80" height="80"/>
         <image name="fblogin.png" width="800" height="300"/>
         <image name="star@x.png" width="256" height="256"/>
-        <image name="tempfoodimage.jpg" width="440" height="264"/>
         <image name="templogo.png" width="338" height="209"/>
         <image name="tempwheel.png" width="689" height="689"/>
         <image name="wedge.png" width="150" height="150"/>
